# priorart-pal

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTES.md  README.md  SECURITY.md  skills-lock.json
.claude/commands/: pocock.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 0001_initial_schema.py
api/src/priorart_pal/: logging_config.py  main.py  settings.py
api/src/priorart_pal/core/: search.py
api/src/priorart_pal/db/: models.py  session.py
api/src/priorart_pal/embed/: voyage.py
api/src/priorart_pal/extract/: extractor.py  schema.py
api/src/priorart_pal/routers/: health.py  search.py
api/tests/: test_db_models.py  test_extract.py  test_health.py  test_search.py
docs/: ontology-v1.md  seed-corpus.md
docs/adr/: 0001-citation-anchor-consistency.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/diagrams/: README.md  architecture.d2
evals/: README.md
evals/judge/: prompts.py
evals/runners/: ablation.py  generation.py  retrieval.py  structural.py
evals/sql/: office_actions_eval.sql
infra/: README.md  app.py  cdk.json  pyproject.toml
infra/stacks/: api_gateway_stack.py  app_runner_stack.py  auth_stack.py  billing_alarms_stack.py  database_stack.py  frontend_stack.py  monitoring_stack.py  networking_stack.py  secrets_stack.py
infra/tests/: test_synth.py
scripts/: README.md  extract_graphs.py  extract_independent_claims.py  ingest_embeddings.py  sanity_search.py
web/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/tests/: App.test.tsx
