[project]
name = "priorart-pal-api"
version = "0.1.0"
description = "FastAPI backend for PriorArt Pal"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.46.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "psycopg[binary,pool]>=3.2.0",
    "pgvector>=0.3.6",
    "alembic>=1.13.0",
    "voyageai>=0.3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.15.13",
    "mypy>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/priorart_pal"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
# pgvector ships without py.typed; SQLAlchemy stubs cover the parts we use.
module = "pgvector.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# voyageai SDK ships without py.typed; thin wrapper in embed/voyage.py
# surfaces our own typed return values.
module = "voyageai.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
pythonpath = ["src"]
